# PicPickr

./: .gitignore  CMakeLists.txt
src/: main.c
